feat: 고령층 템플릿에서 결제하기 후 주문번호 조회 단계 구현
- 결제하기 버튼을 눌렀을 때 주문완료 후 조회로 넘어가지 않는 문제
- 1. 장바구니에서 계산한 총 금액을 가져와 int로 변환 후 json 으로 DB에 전송
- 2. DB에 주문 데이터 저장하고 주문 완료 템플릿으로 넘어가 주문번호 출력

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -155,7 +155,8 @@
 
 
     </style>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 </head>
 
 <body>
@@ -172,7 +173,7 @@
                 <!-- Cart items will be populated here dynamically -->
             </div>
             <div id="totalPrice" class="total-price">총 가격: ₩0</div>
-            <button id="orderBtn">결제하기</button>
+            <button id="submitOrderBtn">결제하기</button>
         </div>
         <form id="speechForm">
             {% csrf_token %}
@@ -267,10 +268,6 @@
             totalPrice.textContent = `총 가격: ₩${currentTotal}`;
         }
 
-    //     document.getElementById('orderBtn').addEventListener('click', function() {
-    //     window.location.href = 'orders/submit_order/';
-    // });
-
     // 음성인식 재시작
     document.getElementById('voiceRestart').addEventListener('click', speak_again);
 
@@ -337,6 +334,44 @@
 
         }
     }
+
+    const selectedItems = {};
+
+    document.getElementById('submitOrderBtn').addEventListener('click', function () {
+        const selectedItemsArray = Object.entries(selectedItems).map(([name, item]) => {
+            return {name: name, count: item.count};
+        });
+
+        // Retrieve the total price directly from the DOM
+        let totalPriceElement = document.getElementById('totalPrice');
+        let currentTotal = parseInt(totalPriceElement.textContent.replace('총 가격: ₩', ''), 10) || 0;
+    
+        // 요청 데이터를 JSON 문자열로 변환하여 전송
+        $.ajax({
+            url: '/orders/get_menus/',
+            cache: false,
+            dataType: 'json',
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({items: selectedItemsArray, total_price: currentTotal}),
+            beforeSend: function (xhr) {
+                const csrfToken = getCsrfToken();
+                if (csrfToken) {
+                    xhr.setRequestHeader('X-CSRFToken', csrfToken);
+                } else {
+                    console.error('CSRF 토큰이 설정되지 않았습니다.');
+                    return false;
+                }
+            },
+            success: function (data) {
+                console.log('주문이 성공적으로 처리되었습니다.');
+                window.location.href = '/orders/order_complete/' + data.order_number + '/';
+            },
+            error: function (error) {
+                console.error('주문 처리 중 오류가 발생했습니다:', error);
+            }
+        });
+    });
 
     </script>
 </body>
