chore: ai bot 추천 시스템 개선
template에서 ai의 추천 메뉴를 받아서 크게 표시를 해주는 기능

--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -309,7 +309,7 @@
     window.addEventListener('load', function () {
         const hashtags = "";
         updateMenus(hashtags)
-        const welcomeMessage = "반갑습니다. 필요한 것이 있다면 AI 음성인식을 누르고 말씀해주세요.";
+        const welcomeMessage = "AI 음성인식을 눌러주세요.";
         {#시끄러워서 주석처리#}
         speak(welcomeMessage);
     });
