chore: ai bot 추천 시스템 개선
기존의 추천방식에서 변경, AI 추천 메뉴 3가지을 받아서 리스트화 표시가 가능하도록 설정

--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -265,7 +265,10 @@
         </div>
 
         <img style="width: 100px" src="{% static 'img/개.png' %}" alt="안내 도우미">
-
+    </div>
+    <div class="categories d-flex justify-content-center">
+        <div class="btn-group" role="group" aria-label="카테고리">
+        </div>
     </div>
     <div style="display: flex; flex-direction: row;">
         <div class="recommended-menu">
