--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -313,7 +313,7 @@
         const hashtags = "";
         updateMenus(hashtags)
         const welcomeMessage = "AI 음성인식을 눌러주세요.";
-        {#시끄러워서 주석처리#}
+        // {#시끄러워서 주석처리#}
         speak(welcomeMessage);
     });
 
